// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Recaptcha /> should render invisible version 1`] = `
<div
  className="g-recaptcha"
  data-callback="_grecaptcha.data-callback"
  data-expired-callback="_grecaptcha.data-expired-callback"
  data-sitekey="6LedJiATAAAAAJvpLFxW9dSiEGu8rGyoOIuTsvtg"
  data-size="invisible"
/>
`;

exports[`<Recaptcha /> should render with \`g-recaptcha\` className 1`] = `
<div
  className="g-recaptcha"
  data-callback="_grecaptcha.data-callback"
  data-expired-callback="_grecaptcha.data-expired-callback"
  data-sitekey="6LedJiATAAAAAJvpLFxW9dSiEGu8rGyoOIuTsvtg"
/>
`;

exports[`<Recaptcha /> should render without non-HTML component properties 1`] = `
<div
  className="g-recaptcha"
  data-callback="_grecaptcha.data-callback"
  data-expired-callback="_grecaptcha.data-expired-callback"
  data-sitekey="6LedJiATAAAAAJvpLFxW9dSiEGu8rGyoOIuTsvtg"
/>
`;
